--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/robisonJohn/blog-app.git"
   },
-  "type": "module",
+  
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -31,5 +31,6 @@
     "jest": "^27.0.6",
     "nodemon": "^2.0.12",
     "supertest": "^6.1.3"
-  }
+  },
+  "type": "module"
 }
