setup base test for jest

--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest tests --detectOpenHandles --silent",
     "dev": "nodemon server.js",
     "start": "node server.js"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/robisonJohn/blog-app.git"
   },
+  
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -27,8 +31,6 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.14.5",
-    "@babel/preset-env": "^7.14.7",
     "jest": "^27.0.6",
     "nodemon": "^2.0.12",
     "supertest": "^6.1.3"
