--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "type": "git",
     "url": "git+https://github.com/robisonJohn/blog-app.git"
   },
-  
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -31,6 +30,8 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
     "jest": "^27.0.6",
     "nodemon": "^2.0.12",
     "supertest": "^6.1.3"
